# Plover-Tonal-Wagtail

./: README.md  plover-magpie.py  plover_tonalwagtail.py  setup.cfg  tonal_wagtail.py
dictionaries/: wagtail-tonal-2char.json
plover-tonal-wagtail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plover-tonalwagtail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
